--- a/user-services/pom.xml
+++ b/user-services/pom.xml
@@ -57,6 +57,20 @@
 			<version>2.0</version>
 		</dependency>
 
+		<!-- database connection to postgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1212</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>1.5.3.RELEASE</version>
+		</dependency>
+
 
 		<!-- spring security -->
 		<dependency>
