--- a/user-services/pom.xml
+++ b/user-services/pom.xml
@@ -64,6 +64,11 @@
 			<version>9.4.1212</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.195</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
