Added simple pitest profile, and some information to readme

--- a/user-services/pom.xml
+++ b/user-services/pom.xml
@@ -130,4 +130,28 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>pitest</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-maven</artifactId>
+						<version>1.2.0</version>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+								<id>Pitest - Mutation Coverage</id>
+								<goals>
+									<goal>mutationCoverage</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
